# DS-2022

./: CMakeLists.txt  Cvicenie 2.sql  Cvicenie 3.sql  Cvicenie 4 DM.erwin  Cvicenie 4.sql  Cvicenie T6.sql
ChovnStanica/: chovnaStanica.sql
ChovnStanica/InpExp dat/: fin_operacie.ctl  plemena.ctl  pobocky.ctl  pobocky_zariadenia.ctl  zakaznici_dodavatelia.ctl  zamestnanci.ctl  zariadenia.ctl  zvierata.ctl
ChovnaStanica/: Report zakaznici dodavatelia.xml  ReportZakDodhtml.html  Statistikapredaja.html  chovnaStanica-odovzdavanie.sql  chovnaStanica.sql  exp_chovna_stanica.exp  export_chovna_stanica.exp  pocet_zamestnancov.xml  statistika predaja.xml  testy.sql  zver_na_pobocke.xml
ChovnaStanica/InpExp dat/: fin_operacie.ctl  fin_operacie.unl  plemena.unl  pobocky.unl  pobocky_zariadenia.unl  zakaznici_dodavatelia.unl  zamestnanci.ctl  zamestnanci.unl  zariadenia.unl  zvierata.ctl  zvierata.unl
Cvicenie 10/: Cvicenie T10.sql  bunus.sql
Cvicenie 11/: Cvicenie T11.sql  precvicovanie na test T11.sql  report_export.xml
Cvicenie 2/: Cvicenie 2.sql
Cvicenie 4/: du_sql.ddl  soc_poistovna_studenti.erwin
Cvicenie 5/: Cvicenie T5.sql  Precvicovanie_na_test_1.sql  Príkazi používane v sql klientovy.txt
Cvicenie 6/: Cvicenie T6.sql  zamestnanci.ctl
Cvicenie 7/: BonusovaUlohaT7.sql  Cvicenie T7.sql  Main.cpp  Zamestnanci.sql  zamestnanci.txt
Cvicenie 8/: Cvicenie T8.sql  Main.cpp  day_calendar.unl  name_calendar.csv  name_day_calendar.ctl  name_day_calendar.sql  name_day_calendar.unl
Cvicenie 9/: Cvicenie T9.sql
Skuskove/: skuskove T5.sql
(+54 files in other folders)
